# mytree

./: .gitignore  .mytree.json  .mytreeignore.sample  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: lint.yml  pythonapp.yml  test.yml
MyTree/: display.py  mytree.py
myTree/: __init__.py  display.py  mytree.py
mytree/: constants.py  decoration.py  display.py  main.py  mytree.py  tests.py
tests/: test_argparse.py  test_treenode.py
