[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mytree"
version = "1.0.0"
description = "Simple tree implementation with Python"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
mytree = "mytree.mytree:main"
